--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.BBsRs.horoscopeNewEdition"
     android:installLocation="auto"
-    android:versionCode="27"
-    android:versionName="3.0 Alpha" >
+    android:versionCode="28"
+    android:versionName="3.0 Release b1" >
 
     <uses-sdk
         android:minSdkVersion="9"
@@ -11,6 +11,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:name="com.BBsRs.horoscopeNewEdition.Base.BaseApplication"
@@ -20,6 +21,13 @@
         android:label="@string/app_name"
         android:largeHeap="true"
         android:theme="@style/ContentTheme" >
+        
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <activity
+            android:name="com.google.android.gms.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize|locale" />
         <activity
             android:name=".ContentActivity"
             android:configChanges="locale" >
