--- a/project.properties
+++ b/project.properties
@@ -12,4 +12,5 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../ActionBarPullToRefreshCompat
+android.library.reference.1=..\\ActionBarPullToRefreshCompat
+android.library.reference.2=../GooglePlayServicesSeven
